# TP_C_Cpp_HW

./: .codecov.yml  .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.in  CPPLINT.cfg  README.md
include/: email_parser.h  my_string.h  testing.h
lib_num_sequence/include/: numseq.h
lib_num_sequence/src_consistent/: numseq.c
lib_num_sequence/src_parallel/: numseq.c
project/: CMakeLists.txt
src/: email_parser.c  main.c  my_string.c  testing.c
tests/: CMakeLists.txt  email_parser.cpp  my_string.cpp  numseq_consistent.cpp  numseq_parallel.cpp  numseq_stress_comparison.cpp  stress_test.py  testing.cpp
